# SmellHunter

./: AGENTS.md  Makefile  README.md  main.py  pyproject.toml
examples/: mock_git_log.txt
src/arch_audit/: __init__.py  cli.py  clustering.py  cochange_matrix.py  commit_parser.py  git_history.py  similarity.py  smell_detection.py
src/smell_hunter/: __init__.py  cli.py  filters.py  similarity.py
tests/: test_cli.py  test_clustering.py  test_cochange_matrix.py  test_commit_parser.py  test_git_history.py  test_similarity.py  test_smell_detection.py
