[project]
name = "arch-audit"
version = "0.1.0"
description = "CLI tool for analyzing frontend architecture from Git history"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.46",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "typer>=0.24.1",
]

[project.scripts]
arch-audit = "arch_audit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
